Export animated mesh to alembic fail when there are multiple UV maps #77021

Closed
opened 2020-05-24 12:51:55 +02:00 by Lance Phan · 6 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-22 19:52, hash: e8dd8c2829
Worked: (newest version of Blender that worked as expected)

Short description of error
When an animated mesh (shape keys or armature) has multiple uv channels, it can't be exported in alembic format

Exact steps for others to reproduce the error
add a shape key to the default cube, animate the shape key value
add another UV channel
export as alembic

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 17), branch: master, commit date: 2020-05-22 19:52, hash: `e8dd8c2829` Worked: (newest version of Blender that worked as expected) **Short description of error** When an animated mesh (shape keys or armature) has multiple uv channels, it can't be exported in alembic format **Exact steps for others to reproduce the error** add a shape key to the default cube, animate the shape key value add another UV channel export as alembic
Author

Added subscriber: @ssendam

Added subscriber: @ssendam

Added subscribers: @dr.sybren, @mano-wii

Added subscribers: @dr.sybren, @mano-wii

I tested and this error message appeared:

Abc Export error: OCompoundProperty::init()
ERROR: EXCEPTION:
Already have a property named: UVMap

It appears that "UVMap" and "UVMap.001" are considered to have the same name.
@ssendam, is it the same error?

Here the file I tested:
tmp_alembic_bug.blend

@dr.sybren, is it an error or a limitation?

I tested and this error message appeared: ``` Abc Export error: OCompoundProperty::init() ERROR: EXCEPTION: Already have a property named: UVMap ``` It appears that "UVMap" and "UVMap.001" are considered to have the same name. @ssendam, is it the same error? Here the file I tested: [tmp_alembic_bug.blend](https://archive.blender.org/developer/F8555577/tmp_alembic_bug.blend) @dr.sybren, is it an error or a limitation?
Sybren A. Stüvel self-assigned this 2020-05-26 16:05:25 +02:00

@mano-wii This is caused by a side-effect of our exporting code's memory management (Alembic considers data "written" and "final" when its C++ objects go out of scope) in combination with my change in 65574463fa. I removed an "only export UVs on the first frame" clause because it was unclear why that was happening. As it turns out, it breaks exporting the 2nd (and subsequent) UV maps on an animated mesh. Effectively, on every frame the Alembic library thinks we want to create a new UV map, instead of continuing to write a new frame of data to the existing one.

@mano-wii This is caused by a side-effect of our exporting code's memory management (Alembic considers data "written" and "final" when its C++ objects go out of scope) in combination with my change in 65574463fa. I removed an "only export UVs on the first frame" clause because it was unclear why that was happening. As it turns out, it breaks exporting the 2nd (and subsequent) UV maps on an animated mesh. Effectively, on every frame the Alembic library thinks we want to create a new UV map, instead of continuing to write a new frame of data to the existing one.

This issue was referenced by a1c9d42584

This issue was referenced by a1c9d425844c5c2299daf9a89438d164f605407c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77021
No description provided.